--- a/journey-through-health-fend/src/app/components/timeline/timeline.component.html
+++ b/journey-through-health-fend/src/app/components/timeline/timeline.component.html
@@ -1,1 +1,29 @@
-<p>timeline works!</p>
+<mgl-timeline [toggle]="toggle" [alternate]="alternate" [side]="side">
+  <mgl-timeline-entry
+    *ngFor="let entry of entries; let i = index"
+    (expand)="onExpandEntry($event, i)"
+  >
+    <mgl-timeline-entry-header (click)="onHeaderClick($event)">
+      <div>{{ entry.header }}</div>
+    </mgl-timeline-entry-header>
+    <mgl-timeline-entry-content
+      [expandAnimationTiming]="contentAnimation ? '200ms ease' : '0ms'"
+      [collapseAnimationTiming]="contentAnimation ? '100ms ease' : '0ms'"
+    >
+      <div>
+        <div>{{ entry.content }}</div>
+        <div>{{ entry.content }}</div>
+        <div>{{ entry.content }}</div>
+      </div>
+    </mgl-timeline-entry-content>
+    <mgl-timeline-entry-side>2018</mgl-timeline-entry-side>
+    <mgl-timeline-entry-dot
+      [class]="color ? 'primary' : 'accent'"
+      [size]="size"
+      (click)="onDotClick($event)"
+      [expandAnimationTiming]="dotAnimation ? '200ms ease' : '0ms'"
+      [collapseAnimationTiming]="dotAnimation ? '100ms ease' : '0ms'"
+      style="text-align: center; background-color: lightblue; color: darkblue"
+    ></mgl-timeline-entry-dot>
+  </mgl-timeline-entry>
+</mgl-timeline>
