Changed date for timeline to date in event

--- a/journey-through-health-fend/src/app/components/timeline/timeline.component.html
+++ b/journey-through-health-fend/src/app/components/timeline/timeline.component.html
@@ -14,7 +14,7 @@
         <div>{{ entry.content }}</div>
       </div>
     </mgl-timeline-entry-content>
-    <mgl-timeline-entry-side>2018</mgl-timeline-entry-side>
+    <mgl-timeline-entry-side>{{ entry.date }}</mgl-timeline-entry-side>
     <mgl-timeline-entry-dot
       [class]="color ? 'primary' : 'accent'"
       [size]="size"
