Added hospital to description

--- a/journey-through-health-fend/src/app/components/timeline/timeline.component.html
+++ b/journey-through-health-fend/src/app/components/timeline/timeline.component.html
@@ -11,6 +11,7 @@
       [collapseAnimationTiming]="contentAnimation ? '100ms ease' : '0ms'"
     >
       <div>
+        <div>{{ entry.header }} happened at {{ entry.hospital }}</div>
         <div>{{ entry.content }}</div>
       </div>
     </mgl-timeline-entry-content>
