--- a/journey-through-health-fend/src/app/components/timeline/timeline.component.html
+++ b/journey-through-health-fend/src/app/components/timeline/timeline.component.html
@@ -22,6 +22,7 @@
             {{ note.created_at }} {{ note.note }}
           </div>
         </div>
+        <button (click)="openDialog(entry.id, i)">Add note</button>
       </div>
     </mgl-timeline-entry-content>
     <mgl-timeline-entry-side>{{ entry.created_at }}</mgl-timeline-entry-side>
