Added search bars for name of event and hospital

--- a/journey-through-health-fend/src/app/components/filters/filters.component.html
+++ b/journey-through-health-fend/src/app/components/filters/filters.component.html
@@ -26,4 +26,14 @@
       </div>
     </form>
   </div>
+
+  <div class="Filter-Name">
+    <span>Name of Event</span>
+    <input type="text" (input)="updateSearchNameFilter($event)" />
+  </div>
+
+  <div class="Filter-Hospital">
+    <span>Name of Hospital</span>
+    <input type="text" (input)="updateSearchHospitalFilter($event)" />
+  </div>
 </div>
