--- a/journey-through-health-fend/src/app/components/timeline/timeline.component.css
+++ b/journey-through-health-fend/src/app/components/timeline/timeline.component.css
@@ -1,3 +1,28 @@
 p {
   font-family: Lato;
 }
+.Date {
+  top: 20px;
+}
+.MainContent {
+  padding: 20px;
+}
+
+.NoteContent {
+  padding: 20px;
+  border: 1px solid black;
+}
+
+.NotesTitle {
+  font-size: 20px;
+  font-weight: 1000;
+}
+
+.Notes {
+  padding-bottom: 20px;
+}
+
+.EventDescription {
+  font-size: 20px;
+  font-weight: 1000;
+}
