feat: add style for header and toggle

--- a/journey-through-health-fend/src/app/components/sidebar/sidebar.component.html
+++ b/journey-through-health-fend/src/app/components/sidebar/sidebar.component.html
@@ -9,7 +9,7 @@
     ng-sidebar-content
     [ngStyle]="{ 'margin-left': _opened ? '300px' : '0px' }"
   >
-    <button (click)="_toggleSidebar()">Toggle sidebar</button>
+    <button class="button" (click)="_toggleSidebar()">Toggle sidebar</button>
     <app-timeline></app-timeline>
   </div>
 </ng-sidebar-container>
