--- a/journey-through-health-fend/src/app/components/header/header.component.css
+++ b/journey-through-health-fend/src/app/components/header/header.component.css
@@ -1,8 +1,47 @@
-.Title {
-  font-size: 36px;
-  background-color: rgb(240, 233, 233);
-  width: 100%;
+* {box-sizing: border-box;}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
 }
+
+.header {
+  width: 100%;
+  overflow: hidden;
+  background-color: #f1f1f1;
+  padding: 20px 10px;
+}
+
+.header a {
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 25px;
+  border-radius: 4px;
+}
+
+.header a.logo {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.header a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.header a.active {
+  background-color: dodgerblue;
+  color: white;
+}
+
+.header-right {
+  float: right;
+}
+
 .mat-toolbar-single-row {
+  width: 100%;
   padding: 0;
 }
