--- a/journey-through-health-fend/src/app/components/header/header.component.html
+++ b/journey-through-health-fend/src/app/components/header/header.component.html
@@ -1,3 +1,9 @@
 <mat-toolbar>
-  <header class="Title">Journey Through Health</header>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <div class="header">
+    <a href="#default" class="logo">Journey Through Health</a>
+    <div class="header-right">
+      <a class="active" href="#home">Home</a>
+    </div>
+  </div>
 </mat-toolbar>
